# aegis-labs

./: .gitignore  README.md
WindowsAdministration/: README.md
WindowsAdministration/WindowsVM/windows_11_pro/: README.md
WindowsAdministration/WindowsVM/windows_server_2022_standard/: README.md
c_labs/does_optimize_algebra_or_not/: main.c  main.zig
deno_labs/lua_inside_deno/: index.html  main.ts
dsa_labs/: results.txt
dsa_labs/bench_against_deque/: main.py
dsa_labs/burmese_python_episode_1/: main.py  requirements.txt
dsa_labs/burmese_python_episode_1/dsa_wasm/: Cargo.toml
dsa_labs/burmese_python_episode_2/: main.py  rust_crate
dsa_labs/burmese_python_episode_2/bench_vec_deque/: Cargo.toml  bench_vec_deque.wasm
dsa_labs/burmese_python_episode_2/zig_wasm/: queue_bench.zig  queue_zig.wasm
lua_labs/linked_list/: main.lua
python_labs/burmese_native_example/: main.py
python_labs/college_project_nr_1/: main.py
python_labs/inherit_slots_or_not/: main.py
rust_labs/axum_trial/src/: main.rs
rust_labs/client-server/: Cargo.toml  README.md
rust_labs/client-server/migrations/: 20250907223228_create-users-table.sql  20250907224923_create-tokens-table.sql
rust_labs/client-server/src/: main.rs
rust_labs/client-server/src/repository/: user_repository.rs
rust_labs/discord_trial/: Cargo.toml
rust_labs/discord_trial/src/: main.rs
rust_labs/jira_discord_example/: Cargo.toml
rust_labs/rust_module_trial/: Cargo.toml
rust_labs/try_postgres_docker/: Cargo.toml  Dockerfile  compose.yml  instructions.txt
zig_labs/linked_list/: main.zig
(+20 files in other folders)
