[package]
name = "client-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }

[[bin]] 
name = "create-admin"
path = "src/bin/create_admin.rs" 

[[bin]]
name = "login"
path = "src/bin/login.rs"
