[package]
name = "discord_trial"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "cache"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "full"] } 
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.2"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }